remove/ from/assets

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         <p class="text-center text-white  mb-3">Pick your future baby cloth's color</p>
 
                         <div class="display_product mb-4">
-                            <img src="/assets/images/red.png" class="product prod_red" id="prod_red" alt="red">
-                            <img src="/assets/images/oren.png" class="product prod_oren" id="prod_oren" alt="oren">
-                            <img src="/assets/images/brown.png" class="product prod_brown" id="prod_brown" alt="blue">
+                            <img src="assets/images/red.png" class="product prod_red" id="prod_red" alt="red">
+                            <img src="assets/images/oren.png" class="product prod_oren" id="prod_oren" alt="oren">
+                            <img src="assets/images/brown.png" class="product prod_brown" id="prod_brown" alt="blue">
                         </div>
 
                         <div class="btn_group text-center">
