--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         html,body {color: #222222;}
         h1 {font-size: 3rem; line-height: 40px; font-weight: 400; font-family: 'Lobster Two', cursive; font-style: italic; line-height: 3rem;} 
       
-        .pageWrap {background-color: #000000; background-image: url(/assets/images/bg_01.jpg); background-size: cover; background-repeat: no-repeat; position: relative; width: 100%; height: 100%; padding: 5rem 0rem;}
+        .pageWrap {background-color: #000000; background-image: url(assets/images/bg_01.jpg); background-size: cover; background-repeat: no-repeat; position: relative; width: 100%; height: 100%; padding: 5rem 0rem;}
         .pageWrap:after {content:'';position:absolute;top: 0; left: 0; width: 100%; height: 100%; background-color: #000000; opacity: .7; z-index: 0;}
 
         .content {position: relative; z-index: 10;}
